package wonders.actions;

public interface Holdable {
    public void Hold(String whom);
}
