package wonders.actions;

public interface Jumpable {
    public void Jump();
}
