package wonders.actions;

public interface Sittable {
    public void Sit(String whom);
}
