package wonders.types;

public enum Age {
    BABY,
    KID,
    TEENAGER,
    ADULT,
    SENIOR;
}
