package wonders.actions;

public interface Watchable {
    public void Watch(String whom);
}
